--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,5 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: system-ui, sans-serif;
 }
